src/test/deca/context/invalid/Class_wrong5.deca
// Mauvais héritage

// Date: 20.01.2022

class A{

    int entier;

    void A (int e){
        this.entier = e;
    }

    void action (){
        this.e = this.e+1;
    }
}

Class B extends A{

    void B (float f){
        super(f);
    }

}

{
B b = new B(1.5);
b.action();
println("ben non");
}